--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Shubham Gupta - PhD student at Computer science in IIT - Delhi and Senior 
 # Short bio or description
 description: Hi, I am persuing a phd in Machine learning. My current focus area includes Graph Represenation learning. Further I am working as Senior Data scienctist in Naukri.com where I mostly work in recommendation, informration retrieval from unstructured sources.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.facebook.com/photo.php?fbid=2851760128211420&set=a.115609461826514&type=3&theater
+avatar: https://github.com/shubhamgupta5893/shubhamgupta5893.github.io/blob/master/images/myphoto.png
 
 #
 # Flags below are optional
@@ -22,7 +22,7 @@ footer-links:
   flickr: 
   github: shubhamgupta5893
   instagram: 
-  linkedin: shubhamgupta5893
+  linkedin: https://www.linkedin.com/in/shubhamguptaiitd/
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: 
